--- a/.env.example
+++ b/.env.example
@@ -6,7 +6,7 @@
 # ===================================
 APP_ENV=production
 APP_DEBUG=false
-APP_BASE_URL=https://admcloud.papion.com.br
+APP_BASE_URL=http://104.234.173.105:7010
 
 # ===================================
 # Banco de Dados
