--- a/.env.example
+++ b/.env.example
@@ -13,7 +13,7 @@ APP_BASE_URL=http://104.234.173.105:7010
 # ===================================
 DB_HOST=104.234.173.105
 DB_PORT=3306
-DB_NAME=adminapi
+DB_NAME=admCloud
 DB_USER=root
 DB_PASSWORD=Ncm@647534
 
